# hinton

./: .gitignore  README.md  hinton_app.py  requirements.txt
frontend/: app.js  index.html  styles.css
frontend/components/: doc_viewer.js  editor.js  folder_tree.js  icons.js  quiz.js  render.js  split_panels.js
frontend/modes/: chat.js  code.js  notebook.js
harness/: __init__.py  agent_loop.py  api.py  boot.py  config.py  db.py  llm_client.py  main.py  mock_llm.py  model_manager.py  plugins.py  prompts.py  server.py
harness/tools/: __init__.py  code_exec.py  file_gen.py  notebook_rag.py  registry.py  research.py
hinton-tauri/src-tauri/: Cargo.toml  tauri.conf.json
hinton-tauri/src-tauri/icons/: icon.icns
hinton-tauri/src-tauri/src/: main.rs
hinton-tauri/ui/: loading.html
packaging/: PACKAGING.md  hinton.spec  installer.iss
packaging/zip/: 12B 모델 설치.cmd  README.txt  바로가기 만들기.cmd
plugins/code_exec/: manifest.json
plugins/file_gen/: manifest.json
plugins/image_gen/: manifest.json
plugins/notebook/: manifest.json
plugins/research/: manifest.json
scripts/: build_app.ps1  build_zip.ps1  download_models.py  fetch_vendor.py  get_gemma.py  get_llama_server.py  get_mtp.py  get_python.py  run.ps1  smoke_backend.py  verify_hinton.py
