[package]
name = "hinton"
version = "0.1.0"
edition = "2021"
description = "Hinton — local offline AI study assistant (Tauri shell)"
default-run = "hinton"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
